AC_INIT()

AC_CHECK_PROG(HAVE_LIBXML, xml2-config, yes, no)
if test [ $HAVE_LIBXML = no ]; then 
	AC_MSG_ERROR(libxml2 must be installed)
fi

AC_CHECK_PROG(HAVE_PGSQL, pg_config, yes, no)
if test [ $HAVE_PGSQL = no ]; then 
	AC_MSG_ERROR(postgresql must be installed)
fi

AC_CHECK_FUNCS()

AC_OUTPUT(Makefile src/ows_define.h)

rm -rf autom4te.cache
rm -f config.log config.status
